--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 </head>
 <body>
 
+    <header>
+    <h1>Md Morsalin Raj</h1>
+    <p>Web Developer | Software Engineering Student</p>
+
+    <nav>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
+
     <h1>Welcome to My Portfolio</h1>
     <p>This is my personal website.</p>
 
