Updated contact  section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,35 @@
         <a href="#contact">Contact</a>
     </nav>
 </header>
+    <section id="about">
+    <h2>About Me</h2>
+    <p>
+        I am Md. Morsalin Raj, a Software Engineering student (6th Batch) at Metropolitan University,
+         Bangladesh. I am an active Rover Scout and a potential executive member of the SWE Innovators Forum. 
+         I have received the National Service Award, President Rover Scout Award, and Community Development Award 
+         for my dedication to leadership, humanitarian service, and community development.
+    </p>
+    </section>
+    <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Java</li>
+        <li>Git & GitHub</li>
+    </ul>
+</section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <p>CampRide – Ride Sharing Mobile Application</p>
+        <p>Library Management System – Book issuing, returning, and student record management web application.</p>
+        <p>Pharmacy Management System – Medicine stock, billing, and customer management web application.</p>
+    </section>
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Email: morsalinraj@gmail.com</p>
+        <p>Phone: 01731100490</p>
+    </section>
 
     <h1>Welcome to My Portfolio</h1>
     <p>This is my personal website.</p>
