--- a/index.html
+++ b/index.html
@@ -3,53 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <title>My Portfolio</title>
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+    <!-- Header -->
     <header>
-    <h1>Md Morsalin Raj</h1>
-    <p>Web Developer | Software Engineering Student</p>
+        <h1>Md Morsalin Raj</h1>
+        <p>Web Developer | Software Engineering Student</p>
 
-    <nav>
-        <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-    </nav>
-</header>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#skills">Skills</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
+    <!-- About -->
     <section id="about">
-    <h2>About Me</h2>
-    <p>
-        I am Md. Morsalin Raj, a Software Engineering student (6th Batch) at Metropolitan University,
-         Bangladesh. I am an active Rover Scout and a potential executive member of the SWE Innovators Forum. 
-         I have received the National Service Award, President Rover Scout Award, and Community Development Award 
-         for my dedication to leadership, humanitarian service, and community development.
-    </p>
+        <h2>About Me</h2>
+        <p>
+            I am a Software Engineering student passionate about web development
+            and learning new technologies. I enjoy building clean and simple
+            web applications using HTML and CSS.
+        </p>
     </section>
+
+    <!-- Skills -->
     <section id="skills">
-    <h2>Skills</h2>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Java</li>
-        <li>Git & GitHub</li>
-    </ul>
-</section>
+        <h2>Skills</h2>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Java</li>
+            <li>Git & GitHub</li>
+        </ul>
+    </section>
+
+    <!-- Projects -->
     <section id="projects">
         <h2>Projects</h2>
-        <p>CampRide – Ride Sharing Mobile Application</p>
-        <p>Library Management System – Book issuing, returning, and student record management web application.</p>
-        <p>Pharmacy Management System – Medicine stock, billing, and customer management web application.</p>
+
+        <div class="project">
+            <h3>Library Management System</h3>
+            <p>Book issuing, returning, and member record management system.</p>
+        </div>
+
+        <div class="project">
+            <h3>Pharmacy Management System</h3>
+            <p>Medicine inventory, billing, and sales management system.</p>
+        </div>
     </section>
+
+    <!-- Contact -->
     <section id="contact">
         <h2>Contact Me</h2>
         <p>Email: morsalinraj@gmail.com</p>
-        <p>Phone: 01731100490</p>
+        <p>Phone: 01XXXXXXXXX</p>
     </section>
 
-    <h1>Welcome to My Portfolio</h1>
-    <p>This is my personal website.</p>
+    <!-- Footer -->
+    <footer>
+        <p>© 2026 Md Morsalin Raj</p>
+    </footer>
 
 </body>
 </html>
