--- a/index.html
+++ b/index.html
@@ -1,77 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My Portfolio</title>
-
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Md. Morsalin Raj | Software Engineer</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <!-- Header -->
-    <header>
-        <h1>Md Morsalin Raj</h1>
-        <p>Web Developer | Software Engineering Student</p>
+<nav style="position:fixed;top:20px;left:50%;transform:translateX(-50%);z-index:1000;background:rgba(17,24,39,.6);backdrop-filter:blur(10px);padding:10px 22px;border-radius:999px;border:1px solid rgba(255,255,255,.1)">
+  <a href="#about">About</a> · <a href="#skills">Skills</a> · <a href="#projects">Projects</a> · <a href="#experience">Experience</a> · <a href="#awards">Awards</a> · <a href="#contact">Contact</a>
+</nav>
 
-        <nav>
-            <a href="#about">About</a>
-            <a href="#skills">Skills</a>
-            <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
+<header>
+  <div>
+    <h1>MD. MORSALIN RAJ</h1>
+    <p class="tag">Software Engineer</p>
+    <p><strong>Department:</strong> Software Engineering</p>
+    <p><strong>University:</strong> Metropolitan University</p>
+    <p style="margin-top:20px;color:var(--muted)">President Scout Award & National Service Award Recipient</p>
+  </div>
+</header>
 
-    <!-- About -->
-    <section id="about">
-        <h2>About Me</h2>
-        <p>
-            I am a Software Engineering student passionate about web development
-            and learning new technologies. I enjoy building clean and simple
-            web applications using HTML and CSS.
-        </p>
-    </section>
+<section id="about">
+  <h2>About Me</h2>
+  <p>
+    I am a passionate and disciplined software engineering student from Metropolitan University. Alongside my technical journey, I am deeply involved in social development and national service activities through Rover Scouting. I believe in using technology as a tool for positive social impact.
+  </p>
+</section>
 
-    <!-- Skills -->
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Java</li>
-            <li>Git & GitHub</li>
-        </ul>
-    </section>
+<section id="skills">
+  <h2>Technical Skills</h2>
+  <div class="skills">
+    <span>C</span><span>C++</span><span>Python</span><span>Java</span><span>JavaScript</span><span>SQL</span>
+  </div>
+</section>
 
-    <!-- Projects -->
-    <section id="projects">
-        <h2>Projects</h2>
+<section id="experience">
+  <h2>Experience & Activities</h2>
+  <div class="grid">
+    <div class="card">
+      <h3>Software Engineering Student</h3>
+      <p>Metropolitan University</p>
+      <p>Hands-on experience with academic and real-world software projects, team collaboration, and problem solving.</p>
+    </div>
+    <div class="card">
+      <h3>Rover Scout Leader</h3>
+      <p>Bangladesh Scouts</p>
+      <p>Actively involved in social development, leadership training, disaster response, and community service.</p>
+    </div>
+  </div>
+</section>
 
-        <div class="project">
-            <h3>Library Management System</h3>
-            <p>Book issuing, returning, and member record management system.</p>
-        </div>
+<section id="projects">
+  <h2>Projects</h2>
+  <div class="grid">
+    <div class="card">
+      <h3>Library Management System</h3>
+      <p>Complete system for book issuing, returning, catalog management, and member records.</p>
+    </div>
+    <div class="card">
+      <h3>Pharmacy Management System</h3>
+      <p>Medicine inventory control, billing automation, and daily sales reporting solution.</p>
+    </div>
+    <div class="card">
+      <h3>Campus Ride Share App</h3>
+      <p>Secure campus-based ride-sharing application ensuring safe, affordable, and efficient student transportation.</p>
+    </div>
+  </div>
+</section>
 
-        <div class="project">
-            <h3>Pharmacy Management System</h3>
-            <p>Medicine inventory, billing, and sales management system.</p>
-        </div>
-    </section>
+<section id="awards">
+  <h2>Awards & Recognition</h2>
+  <div class="grid">
+    <div class="card">
+      <h3>President Scout Award</h3>
+      <p>Highest recognition for outstanding leadership, discipline, and service to society.</p>
+    </div>
+    <div class="card">
+      <h3>National Service Award</h3>
+      <p>Honored for exceptional contribution to social development and national service initiatives.</p>
+    </div>
+  </div>
+</section>
 
-    <!-- Contact -->
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <p>Email: morsalinraj@gmail.com</p>
-        <p>Phone: 01XXXXXXXXX</p>
-    </section>
+<section id="contact">
+  <h2>Contact & Collaboration</h2>
+  <p>Interested in collaboration, projects, or opportunities? Let’s connect.</p>
+  <p>Email: <a href="mailto:morsalinraj490@gmail.com">morsalinraj490@gmail.com</a></p>
+  <p>Phone: 01731100490</p>
+</section>
 
-    <!-- Footer -->
-    <footer>
-        <p>© 2026 Md Morsalin Raj</p>
-    </footer>
+<footer>
+  <p>© 2026 Md. Morsalin Raj | Software Engineer | Serving with code & commitment</p>
+</footer>
 
 </body>
 </html>
