--- a/index.html
+++ b/index.html
@@ -4,95 +4,123 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Md. Morsalin Raj | Software Engineer</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<nav style="position:fixed;top:20px;left:50%;transform:translateX(-50%);z-index:1000;background:rgba(17,24,39,.6);backdrop-filter:blur(10px);padding:10px 22px;border-radius:999px;border:1px solid rgba(255,255,255,.1)">
-  <a href="#about">About</a> · <a href="#skills">Skills</a> · <a href="#projects">Projects</a> · <a href="#experience">Experience</a> · <a href="#awards">Awards</a> · <a href="#contact">Contact</a>
-</nav>
+<!-- ===== FIXED TOP HEADER ===== -->
+<div class="top-header">
+  <a href="#about">About</a>
+  <a href="#skills">Skills</a>
+  <a href="#projects">Projects</a>
+  <a href="#experience">Experience</a>
+  <a href="#awards">Awards</a>
+  <a href="#contact">Contact</a>
+</div>
 
-<header>
-  <div>
-    <h1>MD. MORSALIN RAJ</h1>
-    <p class="tag">Software Engineer</p>
-    <p><strong>Department:</strong> Software Engineering</p>
-    <p><strong>University:</strong> Metropolitan University</p>
-    <p style="margin-top:20px;color:var(--muted)">President Scout Award & National Service Award Recipient</p>
-  </div>
+<!-- ===== HERO ===== -->
+<header class="hero">
+  <h1>MD. MORSALIN RAJ</h1>
+  <p class="tag">Software Engineer</p>
+  <p>Department of Software Engineering</p>
+  <p>Metropolitan University</p>
 </header>
 
+<!-- ===== SECTIONS ===== -->
 <section id="about">
   <h2>About Me</h2>
   <p>
-    I am a passionate and disciplined software engineering student from Metropolitan University. Alongside my technical journey, I am deeply involved in social development and national service activities through Rover Scouting. I believe in using technology as a tool for positive social impact.
+    I am a dedicated Software Engineering student at Metropolitan University with a strong interest in web development and modern software technologies. I enjoy creating clean, responsive, and user-friendly web applications that provide real value to users.
+
+My primary focus is on HTML, CSS, and JavaScript, and I am continuously expanding my skills to become a full-stack developer. I am passionate about learning new technologies, solving real-world problems, and improving my coding skills through hands-on projects.
+
+My goal is to build a successful career as a Software Engineer and contribute to impactful software solutions.
   </p>
 </section>
 
 <section id="skills">
-  <h2>Technical Skills</h2>
+  <h2>Skills</h2>
   <div class="skills">
-    <span>C</span><span>C++</span><span>Python</span><span>Java</span><span>JavaScript</span><span>SQL</span>
-  </div>
-</section>
-
-<section id="experience">
-  <h2>Experience & Activities</h2>
-  <div class="grid">
-    <div class="card">
-      <h3>Software Engineering Student</h3>
-      <p>Metropolitan University</p>
-      <p>Hands-on experience with academic and real-world software projects, team collaboration, and problem solving.</p>
-    </div>
-    <div class="card">
-      <h3>Rover Scout Leader</h3>
-      <p>Bangladesh Scouts</p>
-      <p>Actively involved in social development, leadership training, disaster response, and community service.</p>
-    </div>
+    <span>C</span><span>C++</span><span>Python</span>
+    <span>Java</span><span>JavaScript</span><span>SQL</span>
   </div>
 </section>
 
 <section id="projects">
   <h2>Projects</h2>
+
   <div class="grid">
+
     <div class="card">
       <h3>Library Management System</h3>
-      <p>Complete system for book issuing, returning, catalog management, and member records.</p>
+      <p>
+        A web-based system designed to manage library books, members,
+        and borrowing records efficiently. This project helps reduce
+        manual work and improves data organization through a simple
+        and user-friendly interface.
+      </p>
     </div>
+
     <div class="card">
       <h3>Pharmacy Management System</h3>
-      <p>Medicine inventory control, billing automation, and daily sales reporting solution.</p>
+      <p>
+        A management system developed to handle medicine inventory,
+        sales records, and stock updates in a pharmacy. The project
+        focuses on automating daily pharmacy operations and ensuring
+        accurate data management.
+      </p>
     </div>
+
     <div class="card">
       <h3>Campus Ride Share App</h3>
-      <p>Secure campus-based ride-sharing application ensuring safe, affordable, and efficient student transportation.</p>
+      <p>
+        A campus-based ride sharing application concept that allows
+        students to offer and request rides easily. The project aims
+        to improve transportation convenience, safety, and cost
+        efficiency for students.
+      </p>
     </div>
+
   </div>
 </section>
 
-<section id="awards">
-  <h2>Awards & Recognition</h2>
-  <div class="grid">
-    <div class="card">
-      <h3>President Scout Award</h3>
-      <p>Highest recognition for outstanding leadership, discipline, and service to society.</p>
-    </div>
-    <div class="card">
-      <h3>National Service Award</h3>
-      <p>Honored for exceptional contribution to social development and national service initiatives.</p>
-    </div>
+<section id="experience">
+  <h2>Experience</h2>
+
+  <div class="experience-item">
+    <h3>Web Development (Academic & Personal Projects) <span class="duration">2024 – Present</span></h3>
+    
+
+    <p>
+      I am a Software Engineering student at Metropolitan University with
+      hands-on experience in building web-based applications through
+      academic and personal projects.
+      I have developed projects such as a Library Management System,
+      Pharmacy Management System, and a Campus Ride Sharing application
+      concept using HTML, CSS, and JavaScript.
+      Through these projects, I gained practical experience in UI design,
+      responsive layouts, basic application logic, and problem-solving.
+    </p>
   </div>
+</section>
+
+
+<section id="awards">
+  <h2>Awards</h2>
+  <p>President Scout Award & National Service Award</p>
 </section>
 
 <section id="contact">
-  <h2>Contact & Collaboration</h2>
-  <p>Interested in collaboration, projects, or opportunities? Let’s connect.</p>
-  <p>Email: <a href="mailto:morsalinraj490@gmail.com">morsalinraj490@gmail.com</a></p>
+  <h2>Contact</h2>
+  <p>Email: morsalinraj490@gmail.com</p>
   <p>Phone: 01731100490</p>
 </section>
 
-<footer>
-  <p>© 2026 Md. Morsalin Raj | Software Engineer | Serving with code & commitment</p>
+<!-- ===== SHAPED FOOTER ===== -->
+<footer class="footer-wrap">
+  <div class="footer-shape">
+    © 2026 Md. Morsalin Raj
+  </div>
 </footer>
 
 </body>
